--- a/build.gradle
+++ b/build.gradle
@@ -48,6 +48,13 @@ dependencies {
 	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.6'
 	implementation 'jakarta.xml.bind:jakarta.xml.bind-api:4.0.2'
 	implementation 'io.github.cdimascio:dotenv-java:3.0.0'
+
+	implementation 'net.sf.jasperreports:jasperreports:6.21.2'
+	implementation 'org.apache.commons:commons-collections4:4.4'
+	implementation 'org.eclipse.jdt:ecj:3.18.0'
+
+	// Tambahkan OpenPDF secara eksplisit untuk menghindari error
+	implementation 'com.github.librepdf:openpdf:1.3.30'
 }
 
 tasks.named('test') {
