--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -32,8 +32,8 @@ build:
     - deployment
   script:
     - echo "Compile project to .jar"
-    - cd $CI_PROJECT_DIR
-    - sh gradlew clean assemble
+    - cd /root/builds/t3_BAqY4-/0/propensi-2024-2025-genap/kelas-b/b01-radiant-be
+    - ./gradlew clean assemble
   artifacts:
     paths:
       - build/libs/backend-0.0.1-SNAPSHOT.jar
