--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -42,6 +42,8 @@ publish:
   only:
     - deployment
   script:
+    - echo "IMAGE_NAME $IMAGE_NAME"
+    - echo "IMAGE_TAG $IMAGE_TAG"
     - echo "Build Docker image..."
     - cd /root/$CI_PROJECT_DIR
     - docker build -t $IMAGE_NAME:$IMAGE_TAG -f Dockerfile .
