--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -18,7 +18,7 @@ stages:
   - clean
 
 variables:
-  IMAGE_NAME: $CI_REGISTRY_IMAGE
+  IMAGE_NAME: topahilangharapan/b01-radiant-be
   IMAGE_TAG: latest
 
 build:
@@ -34,6 +34,14 @@ build:
     paths:
       - build/libs/backend-0.0.1-SNAPSHOT.jar
 
+login:
+  stage: publish
+  only:
+    - deployment
+  script:
+    - echo "Login to Docker Hub..."
+    - echo $DOCKER_PASSWORD | docker login -u $DOCKER_USERNAME --password-stdin
+
 publish:
   image: docker:27.3.1-alpine3.20
   stage: publish
@@ -42,13 +50,9 @@ publish:
   only:
     - deployment
   script:
-    - echo "IMAGE_NAME $IMAGE_NAME"
-    - echo "IMAGE_TAG $IMAGE_TAG"
     - echo "Build Docker image..."
     - cd /root/$CI_PROJECT_DIR
     - docker build -t $IMAGE_NAME:$IMAGE_TAG -f Dockerfile .
-    - echo "Login to GitLab Container Registry..."
-    - echo $CI_JOB_TOKEN | docker login $CI_REGISTRY -u gitlab-ci-token --password-stdin
     - echo "Push image to registry..."
     - docker push $IMAGE_NAME:$IMAGE_TAG
 
