--- a/build.gradle
+++ b/build.gradle
@@ -57,6 +57,7 @@ dependencies {
 	implementation 'com.github.librepdf:openpdf:1.3.30'
 
 	implementation 'org.postgresql:postgresql:42.7.1'
+	implementation 'net.sf.jasperreports:jasperreports-fonts:6.19.0'
 }
 
 tasks.named('test') {
