--- a/.github/workflows/gitlab-sync.yml
+++ b/.github/workflows/gitlab-sync.yml
@@ -31,6 +31,12 @@ jobs:
       - name: Set remote URL with PAT
         run: git remote set-url origin https://x-access-token:${{ secrets.GH_TOKEN }}@github.com/topahilangharapan/sispa-backend.git
 
+      - name: Check remotes
+        run: git remote -v
+
+      - name: Check current branch
+        run: git branch
+
       - name: Push to GitHub
         run: |
           git push https://x-access-token:${{ secrets.GH_TOKEN }}@github.com/topahilangharapan/sispa-backend.git --all --force
