--- a/.github/workflows/hostinger-cicd.yml
+++ b/.github/workflows/hostinger-cicd.yml
@@ -44,6 +44,10 @@ jobs:
         with:
           name: backend-jar
 
+      - name: List contents
+        run: |
+          ls -la
+
       - name: Login to Docker Hub
         run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
 
