--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -70,7 +70,7 @@ deploy:
     - pwd
     - ssh "${DEPLOY_USERNAME}@${DEPLOY_SERVER}" "
       export IMAGE_NAME=${IMAGE_NAME} &&
-      export DATABASE_URL_DEV=${DATABASE_URL_DEV} &&
+      export DATABASE_DEV=${DATABASE_DEV} &&
       export DATABASE_USERNAME_DEV=${DATABASE_USERNAME_DEV} &&
       export DATABASE_PASSWORD_DEV=${DATABASE_PASSWORD_DEV} &&
       export JWT_SECRET_KEY=${JWT_SECRET_KEY} &&
