remove auto sync

--- a/.github/workflows/hostinger-cicd.yml
+++ b/.github/workflows/hostinger-cicd.yml
@@ -1,8 +1,8 @@
 name: Hostinger CI/CD Pipeline
 
 on:
-  schedule:
-    - cron: '0 * * * *' # Every hour
+#  schedule:
+#    - cron: '0 * * * *' # Every hour
   workflow_dispatch: # Manual trigger
 
 jobs:
